; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_wasapi_utils.c_device_desc_for_num.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_wasapi_utils.c_device_desc_for_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_desc = type { i32 }
%struct.enumerator = type { i32, i32 }

@.str = private unnamed_addr constant [31 x i8] c"Failed getting device #%d: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.device_desc* (%struct.enumerator*, i32)* @device_desc_for_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.device_desc* @device_desc_for_num(%struct.enumerator* %0, i32 %1) #0 {
  %3 = alloca %struct.device_desc*, align 8
  %4 = alloca %struct.enumerator*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.device_desc*, align 8
  store %struct.enumerator* %0, %struct.enumerator** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* null, i32** %6, align 8
  %9 = load %struct.enumerator*, %struct.enumerator** %4, align 8
  %10 = getelementptr inbounds %struct.enumerator, %struct.enumerator* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @IMMDeviceCollection_Item(i32 %11, i32 %12, i32** %6)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i64 @FAILED(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %2
  %18 = load %struct.enumerator*, %struct.enumerator** %4, align 8
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @mp_HRESULT_to_str(i32 %20)
  %22 = call i32 @MP_ERR(%struct.enumerator* %18, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %19, i32 %21)
  store %struct.device_desc* null, %struct.device_desc** %3, align 8
  br label %32

23:                                               ; preds = %2
  %24 = load %struct.enumerator*, %struct.enumerator** %4, align 8
  %25 = getelementptr inbounds %struct.enumerator, %struct.enumerator* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32*, i32** %6, align 8
  %28 = call %struct.device_desc* @get_device_desc(i32 %26, i32* %27)
  store %struct.device_desc* %28, %struct.device_desc** %8, align 8
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @SAFE_RELEASE(i32* %29)
  %31 = load %struct.device_desc*, %struct.device_desc** %8, align 8
  store %struct.device_desc* %31, %struct.device_desc** %3, align 8
  br label %32

32:                                               ; preds = %23, %17
  %33 = load %struct.device_desc*, %struct.device_desc** %3, align 8
  ret %struct.device_desc* %33
}

declare dso_local i32 @IMMDeviceCollection_Item(i32, i32, i32**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @MP_ERR(%struct.enumerator*, i8*, i32, i32) #1

declare dso_local i32 @mp_HRESULT_to_str(i32) #1

declare dso_local %struct.device_desc* @get_device_desc(i32, i32*) #1

declare dso_local i32 @SAFE_RELEASE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
